Fix hero box on mobile

--- a/styl/styles.styl
+++ b/styl/styles.styl
@@ -217,3 +217,7 @@ header
             padding: 0;
             width: auto;
             margin-top: 13px;
+
+@media (max-width: 400px)
+    #hero-box p
+        font-size: 3rem;
